--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,6 @@ jobs:
         dotnet-version: 6.0.x
     - name: Restore dependencies
       run: dotnet restore
-      working-directory: ./TestHotelMSTest
+      working-directory: ./HotelMSTest
     - name: Build
       run: dotnet build ./HotelMSTest/HotelMSTest.sln
