--- a/HotelMSTest/HotelMSTestService/HotelMSTestService.csproj
+++ b/HotelMSTest/HotelMSTestService/HotelMSTestService.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HotelMSTestDataAccess\HotelMSTestDataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
